INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIRS} ${GLUT_INCLUDE_PATH} ${SIFTGPU_INCLUDE_DIR}})

ADD_EXECUTABLE(SimpleSIFT SimpleSIFT.cpp)
TARGET_LINK_LIBRARIES(SimpleSIFT ${TARGET_LIB_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})

#ADD_EXECUTABLE(MultiThreadSIFT MultiThreadSIFT.cpp)
#TARGET_LINK_LIBRARIES(MultiThreadSIFT ${TARGET_LIB_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})

ADD_EXECUTABLE(Speed speed.cpp)
TARGET_LINK_LIBRARIES(Speed ${TARGET_LIB_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})

ADD_LIBRARY(TestBase STATIC BasicTestWin.cpp BasicTestWin.h GLTransform.h)
TARGET_LINK_LIBRARIES(TestBase ${LIBS_SIFTGPU} ${BUILD_LIBRARIES} ${OPENGL_LIBRARIES} ${CUDA_LIBRARIES})

#ADD_EXECUTABLE(TestWin GLTestWnd.cpp GLTestWnd.h)
#TARGET_LINK_LIBRARIES(TestWin TestBase ${TARGET_LIB_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})

ADD_EXECUTABLE(TestWinGlut TestWinGlut.cpp TestWinGlut.h)
TARGET_LINK_LIBRARIES(TestWinGlut TestBase ${TARGET_LIB_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})

INSTALL(TARGETS SimpleSIFT
        RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin
)
INSTALL(TARGETS TestWinGlut
        RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin
)

SET(CMAKE_VERBOSE_MAKEFILE ON)
